# esp32_nes_apu_mruby

./: .gitignore  CLAUDE.md  CLAUDE_ja.md  CMakeLists.txt  LICENSE  Principal.md  README.md  logformat.txt  partitions.csv  q  sdkconfig.defaults
.devcontainer/: build.sh  devcontainer.json  dockerfile  run_devcontainer.sh
components/apu_emu/: CMakeLists.txt
components/apu_emu/include/: apu_if.h  video_out.h
components/apu_emu/src/: apu_if.cpp  emu.cpp  emu.h  emu_nofrendo.cpp  gui.cpp  hid.cpp  hid_stub.cpp  video_out.h
components/apu_emu/src/_nofrendo/: nes.c  nes_apu.h  nofrendo.c
components/apu_emu/src/hid_server/: hci_transport_esp32.cpp  hid_server.cpp
components/apu_emu/src/nofrendo/: config.c  nes6502.c  nes_apu.c  nes_rom.c  nofconfig.h  nofrendo.c  osd.c
components/picoruby-esp32/: CMakeLists.txt  picoruby-esp32.c
components/picoruby-esp32/mrblib/: main_task.rb
components/picoruby-esp32/picoruby/build_config/: xtensa-esp.rb
components/picoruby-esp32/picoruby/mrbgems/picoruby-filesystem-fat/ports/esp32/: flash_disk.c
components/picoruby-esp32/picoruby/mrbgems/picoruby-machine/include/: machine.h
components/picoruby-esp32/picoruby/mrbgems/picoruby-machine/ports/esp32/: machine.c
components/picoruby-esp32/picoruby/mrbgems/picoruby-machine/src/mrubyc/: machine.c
components/picoruby-esp32/picoruby/mrbgems/picoruby-mruby/lib/mruby/include/: mruby.h
components/picoruby-esp32/picoruby/mrbgems/picoruby-mruby/lib/mruby/src/: gc.c  vm.c
components/picoruby-esp32/picoruby/mrbgems/picoruby-nes-apu/: mrbgem.rake
components/picoruby-esp32/picoruby/mrbgems/picoruby-nes-apu/mrblib/: nes_apu.rb
components/picoruby-esp32/picoruby/mrbgems/picoruby-nes-apu/src/: nes-apu.c
components/picoruby-esp32/picoruby/mrbgems/picoruby-shell/mrblib/: shell.rb
components/picoruby-esp32/picoruby/mrbgems/picoruby-shell/shell_executables/: _path.txt  nes_synth.rb  play.rb
fatfs/home/: demo1.rb  midi.rb  nes_synth.rb  play.rb  sample.reglog
main/: CMakeLists.txt  main.c  main.cpp  main_old.cpp
nsf_player/: Makefile  apu_stub.c  apu_stub.h  cpu6502.c  cpu6502.h  main.c  nsf.c  nsf.h
script/: build_continuous_tone_nsf.rb  continuous_tone.asm  continuous_tone_single.asm  continuous_tone_single.nsf  create_test_nsf.py  nes_dump.rb  nsf_dump.rb
spiffs_data/nsf/: continuous_tone_single.nsf  minimal_test.nsf
